--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -133,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "id": "a9b28b53",
       "metadata": {
         "id": "a9b28b53"
@@ -146,7 +146,7 @@
           "traceback": [
             "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[5], line 18\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# TODO: create noisy function\u001b[39;00m\n\u001b[0;32m     17\u001b[0m x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m,np\u001b[38;5;241m.\u001b[39mpi,n_samples)\n\u001b[1;32m---> 18\u001b[0m y \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepsilon\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# TODO: create true function\u001b[39;00m\n\u001b[0;32m     21\u001b[0m x_pure \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m,np\u001b[38;5;241m.\u001b[39mpi,n_samples)\n",
+            "Cell \u001b[1;32mIn[1], line 18\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# TODO: create noisy function\u001b[39;00m\n\u001b[0;32m     17\u001b[0m x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m,np\u001b[38;5;241m.\u001b[39mpi\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m4\u001b[39m,n_samples)\n\u001b[1;32m---> 18\u001b[0m y \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepsilon\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# TODO: create true function\u001b[39;00m\n\u001b[0;32m     21\u001b[0m x_pure \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m,np\u001b[38;5;241m.\u001b[39mpi\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m4\u001b[39m,n_samples)\n",
             "\u001b[1;31mTypeError\u001b[0m: return arrays must be of ArrayType"
           ]
         }
@@ -168,11 +168,11 @@
         "epsilon = 0.1\n",
         "\n",
         "# TODO: create noisy function\n",
-        "x = np.linspace(0,np.pi,n_samples)\n",
+        "x = np.linspace(0,np.pi/4,n_samples)\n",
         "y = np.sin(x, epsilon)\n",
         "\n",
         "# TODO: create true function\n",
-        "x_pure = np.linspace(0,np.pi,n_samples)\n",
+        "x_pure = np.linspace(0,np.pi/4,n_samples)\n",
         "y_pure = np.sin(x_pure,0)\n",
         "\n",
         "# TODO: plot data, line\n",
@@ -282,18 +282,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "id": "aa14e0f4",
       "metadata": {
         "id": "aa14e0f4"
       },
       "outputs": [
         {
-          "ename": "SyntaxError",
-          "evalue": "unterminated string literal (detected at line 19) (189877442.py, line 19)",
+          "ename": "NameError",
+          "evalue": "name 'coefficients' is not defined",
           "output_type": "error",
           "traceback": [
-            "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 19\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(\"Original coefficients: a = {:.4f}, b = {:.4f}\\\".format(a, b))\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 19)\n"
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# TODO: use np polyfit here\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m b_np, a_np \u001b[38;5;241m=\u001b[39m \u001b[43mcoefficients\u001b[49m\u001b[38;5;241m+\u001b[39mnp[\u001b[38;5;241m1\u001b[39m], coefficients_np[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m      3\u001b[0m y_best_np \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mpolyval(coefficients_np, x)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# TODO: plot everything you need to\u001b[39;00m\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'coefficients' is not defined"
           ]
         }
       ],
@@ -380,7 +383,7 @@
         "\n",
         "# TODO: plot data, lines of best fit, true function, make it pretty\n",
         "plt.plot(x, y, label='Train set', color='red')\n",
-        "plt.plot(x, y_best_np, label 'Polyfit line of best fit', color='green')\n",
+        "plt.plot(x, y_best_np, label= 'Polyfit line of best fit', color='green')\n",
         "plt.plot(x, y_true, label='Correct function', color='purple')\n",
         "plt.xlabel('x')\n",
         "plt.ylabel('y')\n",
